rewrite with java